refactor(death): simplify item handling in death messages